# potato_gb

./: .gitmodules  .travis.yml  CMakeLists.txt  LINKS.md  README.md  potato_gb.code-workspace
include/: CPU.h  cartridge.h  cpu.h  log.h  memory.h  motherboard.h
src/: CMakeLists.txt  CPU.cpp  cartridge.cpp  cpu.cpp  log.cpp  main.cpp  memory.cpp  motherboard.cpp
